# opengl_wrapper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FT_OPENGL  HelloWrapper  Makefile  README.md  cmake.sh  cmake_install.cmake
asset/: model2_coin.fbx
glfw-3.3.8/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.3.8/docs/: Doxyfile
glfw-3.3.8/examples/: Makefile  cmake_install.cmake  offscreen
glfw-3.3.8/src/: Makefile  cmake_install.cmake
glfw-3.3.8/tests/: Makefile  clipboard  cmake_install.cmake  cursor  events  glfwinfo  iconify  monitors  msaa  reopen  triangle-vulkan
include/WRAPPER/: Buffer.hpp  Camera.hpp  Shader.hpp  ShaderProgram.hpp  Window.hpp
include/ft_glm/: ft_rotate.hpp
include/glad_linux/: glad.h
include/model/: Mesh.hpp  Model.hpp
source/: Window.cpp  assimp_shader.vert  basic.vert  camera_move_test.cpp  main.cpp  mesh_practice.cpp  model_load.cpp
source/glad/: glad_linux.c  glad_mac.c  glad_win.c
